--- a/InventoryService.TestUitlity/InventoryService.TestUitlity.csproj
+++ b/InventoryService.TestUitlity/InventoryService.TestUitlity.csproj
@@ -138,6 +138,10 @@
       <Project>{280E9442-AEDC-4E2A-8DC7-C28A1D26F1A2}</Project>
       <Name>InventoryService.AkkaInMemoryServer</Name>
     </ProjectReference>
+    <ProjectReference Include="..\InventoryService.BackUpService\InventoryService.BackUpService.csproj">
+      <Project>{E7364FC8-AE25-41F2-811A-AB00E4DD1EC3}</Project>
+      <Name>InventoryService.BackUpService</Name>
+    </ProjectReference>
     <ProjectReference Include="..\InventoryService.InMemory\InventoryService.InMemory.csproj">
       <Project>{307601FC-7BB7-4760-9B68-0F1C3E748E82}</Project>
       <Name>InventoryService.InMemory</Name>
@@ -145,6 +149,10 @@
     <ProjectReference Include="..\InventoryService.Messages\InventoryService.Messages.csproj">
       <Project>{0A7A978D-2BD7-4A10-9088-28C74B5AFF80}</Project>
       <Name>InventoryService.Messages</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InventoryService.NullBackUpService\InventoryService.NullBackUpService.csproj">
+      <Project>{00FC2BBF-6E54-4836-84F4-359F52076CFD}</Project>
+      <Name>InventoryService.NullBackUpService</Name>
     </ProjectReference>
     <ProjectReference Include="..\InventoryService.Storage.InMemory\InventoryService.Storage.InMemoryLib.csproj">
       <Project>{94389D22-92E0-4933-A1C9-41CAB38FFD7C}</Project>
