--- a/InventoryService.AkkaInMemory/InventoryService.AkkaInMemoryServer.csproj
+++ b/InventoryService.AkkaInMemory/InventoryService.AkkaInMemoryServer.csproj
@@ -150,6 +150,10 @@
       <Project>{CCF4CCA9-3BBE-4FF3-8622-EA0737FCB605}</Project>
       <Name>InventoryService.Actors</Name>
     </ProjectReference>
+    <ProjectReference Include="..\InventoryService.BackUpService\InventoryService.BackUpService.csproj">
+      <Project>{E7364FC8-AE25-41F2-811A-AB00E4DD1EC3}</Project>
+      <Name>InventoryService.BackUpService</Name>
+    </ProjectReference>
     <ProjectReference Include="..\InventoryService.Diagnostics\InventoryService.Diagnostics.csproj">
       <Project>{B0275619-9508-45C9-8C05-62BCD3700DB4}</Project>
       <Name>InventoryService.Diagnostics</Name>
