--- a/InventoryService.Messages/InventoryService.Messages.csproj
+++ b/InventoryService.Messages/InventoryService.Messages.csproj
@@ -43,6 +43,9 @@
   <ItemGroup>
     <Compile Include="ActorAliveMessage.cs" />
     <Compile Include="ActorAliveReceivedMessage.cs" />
+    <Compile Include="BackUpAllInventoryCompletedMessage.cs" />
+    <Compile Include="BackUpAllInventoryFailedMessage.cs" />
+    <Compile Include="BackUpAllInventoryMessage.cs" />
     <Compile Include="CompletedMessageFactory.cs" />
     <Compile Include="ErrorType.cs" />
     <Compile Include="ExportAllInventoryCompletedMessage.cs" />
