--- a/InventoryService.Server/InventoryService.Server.csproj
+++ b/InventoryService.Server/InventoryService.Server.csproj
@@ -130,9 +130,17 @@
       <Project>{CCF4CCA9-3BBE-4FF3-8622-EA0737FCB605}</Project>
       <Name>InventoryService.Actors</Name>
     </ProjectReference>
+    <ProjectReference Include="..\InventoryService.BackUpService\InventoryService.BackUpService.csproj">
+      <Project>{E7364FC8-AE25-41F2-811A-AB00E4DD1EC3}</Project>
+      <Name>InventoryService.BackUpService</Name>
+    </ProjectReference>
     <ProjectReference Include="..\InventoryService.Diagnostics\InventoryService.Diagnostics.csproj">
       <Project>{B0275619-9508-45C9-8C05-62BCD3700DB4}</Project>
       <Name>InventoryService.Diagnostics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InventoryService.NullBackUpService\InventoryService.NullBackUpService.csproj">
+      <Project>{00FC2BBF-6E54-4836-84F4-359F52076CFD}</Project>
+      <Name>InventoryService.NullBackUpService</Name>
     </ProjectReference>
     <ProjectReference Include="..\InventoryService.ServiceClientDeployment\InventoryService.ServiceClientDeployment.csproj">
       <Project>{04D88020-62A8-46EB-B759-ABE8DF93443C}</Project>
