complete azure storage backup service
Added AzureStorageContainerReference and  AzureStorageConnectionString
to app config.  backup file name in lower caser. backup every hour.
todo :  use a factory to load seetings from app config

--- a/InventoryService.AzureBlobBackUpService/InventoryService.AzureBlobBackUpService.csproj
+++ b/InventoryService.AzureBlobBackUpService/InventoryService.AzureBlobBackUpService.csproj
@@ -70,7 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureBlobConfiguration.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="AzureBlobBackUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
