Update config for actor viewer

--- a/InventoryService.ServiceClientDeployment/App.config
+++ b/InventoryService.ServiceClientDeployment/App.config
@@ -6,6 +6,7 @@
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
     <add key="RemoteInventoryActorAddress" value="akka.tcp://InventoryService-Server@localhost:10000/user/InventoryActor" />
+    <add key="RemoteActorViewerActorAddress" value="akka.tcp://ActorViewerService-Server@localhost:11000/user/ActorViewerActor" />
   </appSettings>
   <akka>
     <hocon>
